rm package-lock + rm address

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,14 +5,8 @@
     <h2>Contactez-moi</h2>
     <div class="contact-content">
       <div class="contact-info">
-        <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-          <span itemprop="streetAddress">📍 Votre adresse</span>,
-          <span itemprop="postalCode">83000</span>
-          <span itemprop="addressLocality">Toulon</span>,
-          <span itemprop="addressRegion">Provence-Alpes-Côte d'Azur</span>
-        </p>
-        <p itemprop="telephone">📱 +33 6 XX XX XX XX</p>
-        <p itemprop="email">✉️ contact@artiste-peintre-toulon.fr</p>
+        <p itemprop="telephone">📱 06 20 15 64 10</p>
+        <p itemprop="email">✉️ contact@baudy-peinture.com</p>
         <div class="business-hours" itemprop="openingHoursSpecification" itemscope itemtype="http://schema.org/OpeningHoursSpecification">
           <h3>Horaires d'ouverture :</h3>
           <ul>
